// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricingCard :  renders a snapshot of <PricingCard /> with mock props and currentPlan at false 1`] = `
<div
  className="priceCard"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      mockTitle
    </h3>
    <h5
      className="subTitle"
    >
      mockSubtitle
    </h5>
    <hr />
  </div>
  <div
    className="price"
  >
    <sup
      className="currency"
    >
      NGN
    </sup>
     
    3000
     
    <sub
      className="month"
    >
      / Month
    </sub>
  </div>
  <h5
    className="priceType"
  >
    mockPriceType
     
    
  </h5>
  <div
    className="button"
  >
    <button
      className="
			btn
			button
			false 
			btnBlue
			false
			"
      onClick={[Function]}
      type="submit"
    >
      <div
        className="buttonValue"
      >
        mockBtnText
      </div>
    </button>
  </div>
  <div
    className="featuresCont"
  >
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Everything on Free Plan
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Unlimited Army of Affiliates
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Highest Converting beautiful Templates
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Full Email Service Provider Integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Webinar integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Automated Abandoned Cart Emails
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Installmental Payment
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Membership Course Creation
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Zapier Integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Paypal + Stripe for verified merchants
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Webinar replays (Stream online only)
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Social Proof 
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Exit intent Pop up on sales Page 
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Use your own Domain
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Pre order
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Offer coupons
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Remove default Watermark
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        15GB Storage
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Advanced reports
      </h6>
    </div>
  </div>
</div>
`;

exports[`PricingCard :  renders a snapshot of <PricingCard /> with mock props and currentPlan at true 1`] = `
<div
  className="priceCard"
>
  <div
    className="header"
  >
    <h3
      className="title"
    >
      mockTitle
    </h3>
    <h5
      className="subTitle"
    >
      mockSubtitle
    </h5>
    <hr />
  </div>
  <div
    className="price"
  >
    <sup
      className="currency"
    >
      NGN
    </sup>
     
    3000
     
    <sub
      className="month"
    >
      / Month
    </sub>
  </div>
  <h5
    className="priceType"
  >
    mockPriceType
     
    
  </h5>
  <div
    className="button"
  >
    <button
      className="
			btn
			button
			false 
			btnBlue
			false
			"
      onClick={[Function]}
      type="submit"
    >
      <div
        className="buttonValue"
      >
        mockBtnText
      </div>
    </button>
  </div>
  <div
    className="featuresCont"
  >
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Everything on Free Plan
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Unlimited Army of Affiliates
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Highest Converting beautiful Templates
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Full Email Service Provider Integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Webinar integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Automated Abandoned Cart Emails
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Installmental Payment
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Membership Course Creation
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Zapier Integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Paypal + Stripe for verified merchants
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Webinar replays (Stream online only)
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Social Proof 
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Exit intent Pop up on sales Page 
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Use your own Domain
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Pre order
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Offer coupons
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Remove default Watermark
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        15GB Storage
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Advanced reports
      </h6>
    </div>
  </div>
  <h3
    className="text-primary-blue font-bold text-xl pb-8"
  >
    Current Plan
  </h3>
</div>
`;

exports[`PricingCard :  renders a snapshot of <PricingCard /> with no props 1`] = `
<div
  className="priceCard"
>
  <div
    className="header"
  >
    <h3
      className="title"
    />
    <h5
      className="subTitle"
    />
    <hr />
  </div>
  <div
    className="price"
  >
    <sup
      className="currency"
    >
      NGN
    </sup>
     
     
    <sub
      className="month"
    >
      / Month
    </sub>
  </div>
  <h5
    className="priceType"
  >
     
    
  </h5>
  <div
    className="featuresCont"
  >
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Everything on Free Plan
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Unlimited Army of Affiliates
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Highest Converting beautiful Templates
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Full Email Service Provider Integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Webinar integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Automated Abandoned Cart Emails
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Installmental Payment
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Membership Course Creation
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Zapier Integration
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Paypal + Stripe for verified merchants
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Webinar replays (Stream online only)
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Social Proof 
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Exit intent Pop up on sales Page 
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Use your own Domain
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Pre order
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Offer coupons
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Remove default Watermark
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        15GB Storage
      </h6>
    </div>
    <div
      className="features"
    >
      <div
        className="featuresIcons"
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
      <h6
        className="featuresContent"
      >
        Advanced reports
      </h6>
    </div>
  </div>
</div>
`;
